test/compile_errors/err_transmute_requires_unsafe.w
//! expect-error: transmute requires unsafe context

fn main:
    let _ = transmute[u32](3 as i32)
